In fixing the syntax error in my last commit I ended up setting the wrong color.  Fixing that now.

--- a/server/app/assets/stylesheets/design.css
+++ b/server/app/assets/stylesheets/design.css
@@ -125,7 +125,6 @@ table.styled thead
 table.styled thead a
 {
 	color: #fff;
-	background-color: #666;
 }
 
 
